--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niel</title>
+        <!-- Open Graph meta tags -->
+    <meta property="og:title" content="NielS2 - Meu Portfólio">
+    <meta property="og:description" content="Projeto RPG em .C Esse é o nosso GAME">
+    <meta property="og:image" content="https://i.postimg.cc/2SkzrxK2/projeto.png">
+    <meta property="og:url" content="https://niels2dev.github.io/ProjetoRPG_UERN">
+    <meta property="og:type" content="website">
+
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="icon/pasta-icone.ico" type="image/x-icon">
+
+    <title>Projeto RPG</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
