sua mensagem de commit

--- a/segunda.html
+++ b/segunda.html
@@ -77,7 +77,7 @@
         </div>
 
         <div id="programa6">
-            <a href="paginas/parte006.html"><img src="midias/modulos.png" alt=""></a>
+            <a href="paginas/parte006.html"><img src="midias/arquivos.png" alt=""></a>
             <section>
                 <a href="paginas/parte006.html">
                     <h1>💾 Registro de Dados: O Módulo de Log e Histórico</h1>
@@ -99,7 +99,7 @@
                 <div id="programa9">
             <a href="paginas/parte007.html"><img src="midias/modulos.png" alt=""></a>
             <section>
-                <a href="paginas/parte007.html">
+                <a href="paginas/parte008.html">
                     <h1>🔧 Modularizando o nosso programa 📦</h1>
                     <p></p>
                 </a>
