Mensagem descritiva do seu commit

--- a/segunda.html
+++ b/segunda.html
@@ -101,7 +101,9 @@
             <section>
                 <a href="paginas/parte008.html">
                     <h1>🔧 Modularizando o nosso programa 📦</h1>
-                    <p></p>
+                    <p>
+                                                Depois de finalizarmos o desenvolvimento do nosso jogo em C no Dev-C++, demos um passo importante para melhorar sua organização e manutenção: a modularização do código.
+                    </p>
                 </a>
             </section>
         </div>
