--- a/paginas/parte007.html
+++ b/paginas/parte007.html
@@ -135,6 +135,18 @@
                     </li>
                 </ul>
             </section>
+
+        <section id="video-final-youtube">
+        <h2>Demonstração em Vídeo: Arquitetura e Lógica do RPG em C</h2>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/deS7ePDY-0s?si=jjo-QctK69hNe4qb" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+        </div>
+        </section>
+
         </div>
             <div id="navegacao-doc">
             <a href="parte006.html" class="nav-link voltar">
