--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Open Graph meta tags -->
-    <meta property="og:title" content="NielS2 - Meu Portfólio">
+    <meta property="og:title" content="Técnicas de Programação">
     <meta property="og:description" content="Projeto RPG em .C Esse é o nosso GAME">
     <meta property="og:image" content="https://i.postimg.cc/2SkzrxK2/projeto.png">
     <meta property="og:url" content="https://niels2dev.github.io/ProjetoRPG_UERN">
